19825
```scala
Welcome to Scala version 2.11.7 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_45).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val `1` = "foo"
<console>:5: error: ';' expected but double literal found.
  lazy val $result = 1
                                         ^
<console>:10: error: ')' expected but double literal found.
 + "1: String = " + scala.runtime.ScalaRunTime.replStringOf(1, 1000)
                                                                                ^
<console>:13: error: ')' expected but '}' found.
  }
  ^
```
